Fixed menu spacing

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -21,7 +21,7 @@
   }
 
   &__drawerIcon {
-    height: 2.4rem;
+    height: 2.2rem;
     color: white();
   }
 
